--- a/package.json
+++ b/package.json
@@ -31,9 +31,12 @@
     "motion": "^12.23.12",
     "next-themes": "^0.4.6",
     "react": "^19.1.0",
+    "react-date-object": "^2.1.9",
     "react-day-picker": "^9.8.1",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.62.0",
+    "react-modern-calendar-datepicker": "^3.1.6",
+    "react-multi-date-picker": "^4.5.2",
     "react-router": "^7.7.1",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
