--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "@tailwindcss/vite": "^4.1.11",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
+    "dayjs": "^1.11.13",
     "lucide-react": "^0.536.0",
     "motion": "^12.23.12",
     "next-themes": "^0.4.6",
