--- a/package.json
+++ b/package.json
@@ -31,7 +31,11 @@
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
+    "jalali-moment": "^3.3.11",
+    "jalaliday": "^3.1.0",
     "lucide-react": "^0.536.0",
+    "moment": "^2.30.1",
+    "moment-jalaali": "^0.10.4",
     "motion": "^12.23.12",
     "next-themes": "^0.4.6",
     "react": "^19.1.0",
@@ -45,6 +49,8 @@
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.11",
+    "timezone": "^1.0.23",
+    "utc": "^0.1.0",
     "vaul": "^1.1.2",
     "zod": "^4.0.14"
   },
